Added a comment and model feature importances

--- a/2.evaluate_models/classify_genotypes/genotype_classification_evaluation.ipynb
+++ b/2.evaluate_models/classify_genotypes/genotype_classification_evaluation.ipynb
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T18:46:20.599519Z",
-     "iopub.status.busy": "2024-05-22T18:46:20.599418Z",
-     "iopub.status.idle": "2024-05-22T18:46:21.038623Z",
-     "shell.execute_reply": "2024-05-22T18:46:21.038040Z"
+     "iopub.execute_input": "2024-05-22T20:12:49.751042Z",
+     "iopub.status.busy": "2024-05-22T20:12:49.750942Z",
+     "iopub.status.idle": "2024-05-22T20:12:50.174176Z",
+     "shell.execute_reply": "2024-05-22T20:12:50.173764Z"
     },
     "jukit_cell_id": "RcnXoNLyM2"
    },
@@ -54,10 +54,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T18:46:21.041190Z",
-     "iopub.status.busy": "2024-05-22T18:46:21.040990Z",
-     "iopub.status.idle": "2024-05-22T18:46:21.044090Z",
-     "shell.execute_reply": "2024-05-22T18:46:21.043706Z"
+     "iopub.execute_input": "2024-05-22T20:12:50.175999Z",
+     "iopub.status.busy": "2024-05-22T20:12:50.175835Z",
+     "iopub.status.idle": "2024-05-22T20:12:50.178568Z",
+     "shell.execute_reply": "2024-05-22T20:12:50.178304Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -104,10 +104,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T18:46:21.046120Z",
-     "iopub.status.busy": "2024-05-22T18:46:21.045973Z",
-     "iopub.status.idle": "2024-05-22T18:46:23.150316Z",
-     "shell.execute_reply": "2024-05-22T18:46:23.149696Z"
+     "iopub.execute_input": "2024-05-22T20:12:50.179917Z",
+     "iopub.status.busy": "2024-05-22T20:12:50.179811Z",
+     "iopub.status.idle": "2024-05-22T20:12:52.366808Z",
+     "shell.execute_reply": "2024-05-22T20:12:52.366467Z"
     },
     "jukit_cell_id": "zFHiLC64Ss"
    },
@@ -116,6 +116,7 @@
     "data_path = pathlib.Path(f\"{root_dir}/1.train_models/classify_genotypes/data\")\n",
     "\n",
     "evaldf = pd.read_parquet(f\"{data_path}/nf1_model_pre_evaluation_results.parquet\")\n",
+    "model = load(f\"{data_path}/trained_nf1_model.joblib\")\n",
     "le = load(f\"{data_path}/trained_nf1_model_label_encoder.joblib\")"
    ]
   },
@@ -133,10 +134,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T18:46:23.152841Z",
-     "iopub.status.busy": "2024-05-22T18:46:23.152480Z",
-     "iopub.status.idle": "2024-05-22T18:46:23.155209Z",
-     "shell.execute_reply": "2024-05-22T18:46:23.154765Z"
+     "iopub.execute_input": "2024-05-22T20:12:52.369024Z",
+     "iopub.status.busy": "2024-05-22T20:12:52.368823Z",
+     "iopub.status.idle": "2024-05-22T20:12:52.371160Z",
+     "shell.execute_reply": "2024-05-22T20:12:52.370913Z"
     },
     "jukit_cell_id": "byqT0qeQSc"
    },
@@ -151,10 +152,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T18:46:23.157038Z",
-     "iopub.status.busy": "2024-05-22T18:46:23.156667Z",
-     "iopub.status.idle": "2024-05-22T18:46:23.159839Z",
-     "shell.execute_reply": "2024-05-22T18:46:23.159405Z"
+     "iopub.execute_input": "2024-05-22T20:12:52.372868Z",
+     "iopub.status.busy": "2024-05-22T20:12:52.372538Z",
+     "iopub.status.idle": "2024-05-22T20:12:52.375392Z",
+     "shell.execute_reply": "2024-05-22T20:12:52.375122Z"
     },
     "jukit_cell_id": "7K1U3LMO6u"
    },
@@ -194,16 +195,17 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T18:46:23.161427Z",
-     "iopub.status.busy": "2024-05-22T18:46:23.161166Z",
-     "iopub.status.idle": "2024-05-22T18:46:23.168593Z",
-     "shell.execute_reply": "2024-05-22T18:46:23.168146Z"
+     "iopub.execute_input": "2024-05-22T20:12:52.377047Z",
+     "iopub.status.busy": "2024-05-22T20:12:52.376944Z",
+     "iopub.status.idle": "2024-05-22T20:12:52.381960Z",
+     "shell.execute_reply": "2024-05-22T20:12:52.381709Z"
     },
     "jukit_cell_id": "l12u5TJUQx"
    },
    "outputs": [],
    "source": [
-    "# Define evaluation metrics\n",
+    "# Define evaluation metric data\n",
+    "# The \"metrics\" include precision, recall, accuracy, and f1 scores\n",
     "eval_mets = {\n",
     "    met: defaultdict(list) for met in\n",
     "    (\"metrics\", \"precision_recall\", \"confusion_matrix\")\n",
@@ -242,7 +244,7 @@
     "    y_pred = _df[\"predicted_genotype\"]\n",
     "    y_proba = _df[\"probability_WT\"]\n",
     "\n",
-    "    # Store f1 scores\n",
+    "    # Store metrics\n",
     "    eval_mets[\"metrics\"][\"f1_score\"].append(f1_score(y_true, y_pred))\n",
     "    eval_mets[\"metrics\"][\"precision\"].append(precision_score(y_true, y_pred))\n",
     "    eval_mets[\"metrics\"][\"recall\"].append(recall_score(y_true, y_pred))\n",
@@ -274,10 +276,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T18:46:23.170128Z",
-     "iopub.status.busy": "2024-05-22T18:46:23.169881Z",
-     "iopub.status.idle": "2024-05-22T18:47:39.071488Z",
-     "shell.execute_reply": "2024-05-22T18:47:39.071093Z"
+     "iopub.execute_input": "2024-05-22T20:12:52.383306Z",
+     "iopub.status.busy": "2024-05-22T20:12:52.383014Z",
+     "iopub.status.idle": "2024-05-22T20:14:08.608980Z",
+     "shell.execute_reply": "2024-05-22T20:14:08.608571Z"
     },
     "jukit_cell_id": "GGD1QwPX1B"
    },
@@ -303,7 +305,7 @@
     "jukit_cell_id": "EcFFCieEIm"
    },
    "source": [
-    "### Save evaluation metrics for plotting"
+    "### Save evaluation metrics and model coefficients for plotting"
    ]
   },
   {
@@ -311,17 +313,24 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T18:47:39.073470Z",
-     "iopub.status.busy": "2024-05-22T18:47:39.073337Z",
-     "iopub.status.idle": "2024-05-22T18:47:52.325940Z",
-     "shell.execute_reply": "2024-05-22T18:47:52.325545Z"
+     "iopub.execute_input": "2024-05-22T20:14:08.611707Z",
+     "iopub.status.busy": "2024-05-22T20:14:08.611563Z",
+     "iopub.status.idle": "2024-05-22T20:14:21.502660Z",
+     "shell.execute_reply": "2024-05-22T20:14:21.502266Z"
     },
     "jukit_cell_id": "zubg81WM3n"
    },
    "outputs": [],
    "source": [
     "for met, met_data in eval_mets.items():\n",
-    "    pd.DataFrame(eval_mets[met]).to_parquet(f\"{eval_path}/{met}.parquet\")"
+    "    pd.DataFrame(eval_mets[met]).to_parquet(f\"{eval_path}/{met}.parquet\")\n",
+    "\n",
+    "pd.DataFrame(\n",
+    "    {\n",
+    "        \"feature_names\": model.feature_names_in_,\n",
+    "        \"feature_importances\": model.coef_.reshape(-1)\n",
+    "    }\n",
+    ").to_parquet(f\"{eval_path}/feature_importances.parquet\")"
    ]
   }
  ],
