Resolved concatenation with metadata bug

--- a/2.evaluate_models/classify_genotypes/plate_4_sirna_genotype_probabilities.ipynb
+++ b/2.evaluate_models/classify_genotypes/plate_4_sirna_genotype_probabilities.ipynb
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T21:21:24.181120Z",
-     "iopub.status.busy": "2024-05-22T21:21:24.181022Z",
-     "iopub.status.idle": "2024-05-22T21:21:24.400666Z",
-     "shell.execute_reply": "2024-05-22T21:21:24.400286Z"
+     "iopub.execute_input": "2024-05-22T22:11:43.880831Z",
+     "iopub.status.busy": "2024-05-22T22:11:43.880448Z",
+     "iopub.status.idle": "2024-05-22T22:11:44.097522Z",
+     "shell.execute_reply": "2024-05-22T22:11:44.097194Z"
     },
     "jukit_cell_id": "RcnXoNLyM2"
    },
@@ -46,10 +46,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T21:21:24.402418Z",
-     "iopub.status.busy": "2024-05-22T21:21:24.402257Z",
-     "iopub.status.idle": "2024-05-22T21:21:24.405059Z",
-     "shell.execute_reply": "2024-05-22T21:21:24.404741Z"
+     "iopub.execute_input": "2024-05-22T22:11:44.099364Z",
+     "iopub.status.busy": "2024-05-22T22:11:44.099171Z",
+     "iopub.status.idle": "2024-05-22T22:11:44.102054Z",
+     "shell.execute_reply": "2024-05-22T22:11:44.101781Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -96,10 +96,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T21:21:24.406900Z",
-     "iopub.status.busy": "2024-05-22T21:21:24.406549Z",
-     "iopub.status.idle": "2024-05-22T21:21:24.766943Z",
-     "shell.execute_reply": "2024-05-22T21:21:24.766404Z"
+     "iopub.execute_input": "2024-05-22T22:11:44.103672Z",
+     "iopub.status.busy": "2024-05-22T22:11:44.103564Z",
+     "iopub.status.idle": "2024-05-22T22:11:44.450937Z",
+     "shell.execute_reply": "2024-05-22T22:11:44.450301Z"
     },
     "jukit_cell_id": "xdgUvt0md2"
    },
@@ -130,10 +130,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T21:21:24.769087Z",
-     "iopub.status.busy": "2024-05-22T21:21:24.768902Z",
-     "iopub.status.idle": "2024-05-22T21:21:24.771247Z",
-     "shell.execute_reply": "2024-05-22T21:21:24.770969Z"
+     "iopub.execute_input": "2024-05-22T22:11:44.453096Z",
+     "iopub.status.busy": "2024-05-22T22:11:44.452927Z",
+     "iopub.status.idle": "2024-05-22T22:11:44.455137Z",
+     "shell.execute_reply": "2024-05-22T22:11:44.454761Z"
     },
     "jukit_cell_id": "byqT0qeQSc"
    },
@@ -157,10 +157,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T21:21:24.772559Z",
-     "iopub.status.busy": "2024-05-22T21:21:24.772455Z",
-     "iopub.status.idle": "2024-05-22T21:21:24.806977Z",
-     "shell.execute_reply": "2024-05-22T21:21:24.806549Z"
+     "iopub.execute_input": "2024-05-22T22:11:44.456636Z",
+     "iopub.status.busy": "2024-05-22T22:11:44.456524Z",
+     "iopub.status.idle": "2024-05-22T22:11:44.505028Z",
+     "shell.execute_reply": "2024-05-22T22:11:44.504475Z"
     },
     "jukit_cell_id": "qrteU1j4F9"
    },
@@ -188,10 +188,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-22T21:21:24.808962Z",
-     "iopub.status.busy": "2024-05-22T21:21:24.808819Z",
-     "iopub.status.idle": "2024-05-22T21:21:24.843175Z",
-     "shell.execute_reply": "2024-05-22T21:21:24.842770Z"
+     "iopub.execute_input": "2024-05-22T22:11:44.507011Z",
+     "iopub.status.busy": "2024-05-22T22:11:44.506892Z",
+     "iopub.status.idle": "2024-05-22T22:11:44.536692Z",
+     "shell.execute_reply": "2024-05-22T22:11:44.536281Z"
     },
     "jukit_cell_id": "FVQBNEvRSs"
    },
@@ -204,8 +204,8 @@
     "    }\n",
     ")\n",
     "\n",
-    "pd.concat([probabilitydf, plate4df[meta_cols]], axis=1).to_parquet(\n",
-    "    f\"{probability_path}/plate_4_sirna_single_cell_probabilities.parquet\"\n",
+    "pd.concat([probabilitydf, plate4df[meta_cols].reset_index(drop=True)], axis=1).to_parquet(\n",
+    "    f\"{probability_path}/plate_4_sirna_single_cell_probabilities\"\n",
     ")"
    ]
   }
