Update plate 5 aggregated correlations after fixing typo

--- a/0.data_analysis/plate_5_characteristics/plate_5_sc_feature_selected_camerons_agg_well_corr.ipynb
+++ b/0.data_analysis/plate_5_characteristics/plate_5_sc_feature_selected_camerons_agg_well_corr.ipynb
@@ -14,10 +14,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-20T18:27:14.251565Z",
-     "iopub.status.busy": "2024-03-20T18:27:14.251377Z",
-     "iopub.status.idle": "2024-03-20T18:27:14.454555Z",
-     "shell.execute_reply": "2024-03-20T18:27:14.454205Z"
+     "iopub.execute_input": "2024-05-24T21:37:34.161370Z",
+     "iopub.status.busy": "2024-05-24T21:37:34.161262Z",
+     "iopub.status.idle": "2024-05-24T21:37:34.373251Z",
+     "shell.execute_reply": "2024-05-24T21:37:34.372926Z"
     },
     "jukit_cell_id": "YJJxwXk4KC"
    },
@@ -43,10 +43,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-20T18:27:14.456782Z",
-     "iopub.status.busy": "2024-03-20T18:27:14.456424Z",
-     "iopub.status.idle": "2024-03-20T18:27:14.459730Z",
-     "shell.execute_reply": "2024-03-20T18:27:14.459406Z"
+     "iopub.execute_input": "2024-05-24T21:37:34.375442Z",
+     "iopub.status.busy": "2024-05-24T21:37:34.375103Z",
+     "iopub.status.idle": "2024-05-24T21:37:34.377835Z",
+     "shell.execute_reply": "2024-05-24T21:37:34.377581Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -93,10 +93,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-20T18:27:14.461236Z",
-     "iopub.status.busy": "2024-03-20T18:27:14.461132Z",
-     "iopub.status.idle": "2024-03-20T18:27:14.576095Z",
-     "shell.execute_reply": "2024-03-20T18:27:14.575655Z"
+     "iopub.execute_input": "2024-05-24T21:37:34.379455Z",
+     "iopub.status.busy": "2024-05-24T21:37:34.379349Z",
+     "iopub.status.idle": "2024-05-24T21:37:34.487409Z",
+     "shell.execute_reply": "2024-05-24T21:37:34.487041Z"
     },
     "jukit_cell_id": "xdgUvt0md2"
    },
@@ -128,10 +128,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-20T18:27:14.578115Z",
-     "iopub.status.busy": "2024-03-20T18:27:14.577902Z",
-     "iopub.status.idle": "2024-03-20T18:27:14.580229Z",
-     "shell.execute_reply": "2024-03-20T18:27:14.579894Z"
+     "iopub.execute_input": "2024-05-24T21:37:34.489491Z",
+     "iopub.status.busy": "2024-05-24T21:37:34.489356Z",
+     "iopub.status.idle": "2024-05-24T21:37:34.491661Z",
+     "shell.execute_reply": "2024-05-24T21:37:34.491370Z"
     },
     "jukit_cell_id": "z3syxsoQ8C"
    },
@@ -155,10 +155,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-20T18:27:14.581633Z",
-     "iopub.status.busy": "2024-03-20T18:27:14.581445Z",
-     "iopub.status.idle": "2024-03-20T18:27:14.602145Z",
-     "shell.execute_reply": "2024-03-20T18:27:14.601717Z"
+     "iopub.execute_input": "2024-05-24T21:37:34.493069Z",
+     "iopub.status.busy": "2024-05-24T21:37:34.492782Z",
+     "iopub.status.idle": "2024-05-24T21:37:34.510028Z",
+     "shell.execute_reply": "2024-05-24T21:37:34.509713Z"
     },
     "jukit_cell_id": "xhrzmqufGA"
    },
@@ -172,10 +172,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-20T18:27:14.603620Z",
-     "iopub.status.busy": "2024-03-20T18:27:14.603404Z",
-     "iopub.status.idle": "2024-03-20T18:27:14.615731Z",
-     "shell.execute_reply": "2024-03-20T18:27:14.615158Z"
+     "iopub.execute_input": "2024-05-24T21:37:34.511408Z",
+     "iopub.status.busy": "2024-05-24T21:37:34.511295Z",
+     "iopub.status.idle": "2024-05-24T21:37:34.522431Z",
+     "shell.execute_reply": "2024-05-24T21:37:34.522047Z"
     },
     "jukit_cell_id": "rB32cuv8gh"
    },
@@ -199,10 +199,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-20T18:27:14.617801Z",
-     "iopub.status.busy": "2024-03-20T18:27:14.617533Z",
-     "iopub.status.idle": "2024-03-20T18:27:15.484385Z",
-     "shell.execute_reply": "2024-03-20T18:27:15.483824Z"
+     "iopub.execute_input": "2024-05-24T21:37:34.524147Z",
+     "iopub.status.busy": "2024-05-24T21:37:34.524003Z",
+     "iopub.status.idle": "2024-05-24T21:37:34.833774Z",
+     "shell.execute_reply": "2024-05-24T21:37:34.833376Z"
     },
     "jukit_cell_id": "jkgkgRzXxY"
    },
@@ -227,10 +227,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-20T18:27:15.486393Z",
-     "iopub.status.busy": "2024-03-20T18:27:15.486263Z",
-     "iopub.status.idle": "2024-03-20T18:27:15.853358Z",
-     "shell.execute_reply": "2024-03-20T18:27:15.852837Z"
+     "iopub.execute_input": "2024-05-24T21:37:34.835834Z",
+     "iopub.status.busy": "2024-05-24T21:37:34.835684Z",
+     "iopub.status.idle": "2024-05-24T21:37:35.101402Z",
+     "shell.execute_reply": "2024-05-24T21:37:35.100916Z"
     },
     "jukit_cell_id": "2W0HhVoQ8N"
    },
@@ -254,10 +254,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-20T18:27:15.855099Z",
-     "iopub.status.busy": "2024-03-20T18:27:15.854965Z",
-     "iopub.status.idle": "2024-03-20T18:27:15.866867Z",
-     "shell.execute_reply": "2024-03-20T18:27:15.866515Z"
+     "iopub.execute_input": "2024-05-24T21:37:35.103640Z",
+     "iopub.status.busy": "2024-05-24T21:37:35.103501Z",
+     "iopub.status.idle": "2024-05-24T21:37:35.109236Z",
+     "shell.execute_reply": "2024-05-24T21:37:35.108932Z"
     },
     "jukit_cell_id": "HD42qd1jUX"
    },
@@ -272,10 +272,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-03-20T18:27:15.868507Z",
-     "iopub.status.busy": "2024-03-20T18:27:15.868258Z",
-     "iopub.status.idle": "2024-03-20T18:27:15.875939Z",
-     "shell.execute_reply": "2024-03-20T18:27:15.875445Z"
+     "iopub.execute_input": "2024-05-24T21:37:35.110705Z",
+     "iopub.status.busy": "2024-05-24T21:37:35.110594Z",
+     "iopub.status.idle": "2024-05-24T21:37:35.117738Z",
+     "shell.execute_reply": "2024-05-24T21:37:35.117471Z"
     },
     "jukit_cell_id": "ZWUk9bCL8r"
    },
@@ -311,43 +311,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.243265</td>\n",
-       "      <td>HET</td>\n",
-       "      <td>HET</td>\n",
-       "      <td>B5</td>\n",
-       "      <td>B5</td>\n",
+       "      <td>0.107003</td>\n",
+       "      <td>Null</td>\n",
+       "      <td>WT</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>B1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.188601</td>\n",
-       "      <td>HET</td>\n",
-       "      <td>HET</td>\n",
-       "      <td>B5</td>\n",
-       "      <td>B5</td>\n",
+       "      <td>-0.204965</td>\n",
+       "      <td>Null</td>\n",
+       "      <td>WT</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>B2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.056885</td>\n",
-       "      <td>HET</td>\n",
-       "      <td>HET</td>\n",
-       "      <td>B5</td>\n",
-       "      <td>B5</td>\n",
+       "      <td>0.132424</td>\n",
+       "      <td>Null</td>\n",
+       "      <td>WT</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>B3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.128558</td>\n",
-       "      <td>HET</td>\n",
-       "      <td>HET</td>\n",
-       "      <td>B5</td>\n",
-       "      <td>B5</td>\n",
+       "      <td>0.168049</td>\n",
+       "      <td>Null</td>\n",
+       "      <td>WT</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>B4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.255567</td>\n",
-       "      <td>HET</td>\n",
-       "      <td>HET</td>\n",
-       "      <td>B5</td>\n",
-       "      <td>B5</td>\n",
+       "      <td>0.056973</td>\n",
+       "      <td>Null</td>\n",
+       "      <td>WT</td>\n",
+       "      <td>B10</td>\n",
+       "      <td>C1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -355,18 +355,18 @@
       ],
       "text/plain": [
        "   correlation Metadata_genotype__group0 Metadata_genotype__group1  \\\n",
-       "0     0.243265                       HET                       HET   \n",
-       "1     0.188601                       HET                       HET   \n",
-       "2     0.056885                       HET                       HET   \n",
-       "3     0.128558                       HET                       HET   \n",
-       "4     0.255567                       HET                       HET   \n",
+       "0     0.107003                      Null                        WT   \n",
+       "1    -0.204965                      Null                        WT   \n",
+       "2     0.132424                      Null                        WT   \n",
+       "3     0.168049                      Null                        WT   \n",
+       "4     0.056973                      Null                        WT   \n",
        "\n",
        "  Metadata_Well__group0 Metadata_Well__group1  \n",
-       "0                    B5                    B5  \n",
-       "1                    B5                    B5  \n",
-       "2                    B5                    B5  \n",
-       "3                    B5                    B5  \n",
-       "4                    B5                    B5  "
+       "0                   B10                    B1  \n",
+       "1                   B10                    B2  \n",
+       "2                   B10                    B3  \n",
+       "3                   B10                    B4  \n",
+       "4                   B10                    C1  "
       ]
      },
      "execution_count": 10,
@@ -396,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
