--- a/2.evaluate_models/classify_genotypes/plate_4_sirna_genotype_probabilities.ipynb
+++ b/2.evaluate_models/classify_genotypes/plate_4_sirna_genotype_probabilities.ipynb
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T16:40:45.982269Z",
-     "iopub.status.busy": "2024-05-28T16:40:45.982093Z",
-     "iopub.status.idle": "2024-05-28T16:40:46.203472Z",
-     "shell.execute_reply": "2024-05-28T16:40:46.203134Z"
+     "iopub.execute_input": "2024-05-28T17:17:03.783174Z",
+     "iopub.status.busy": "2024-05-28T17:17:03.783074Z",
+     "iopub.status.idle": "2024-05-28T17:17:04.001053Z",
+     "shell.execute_reply": "2024-05-28T17:17:04.000697Z"
     },
     "jukit_cell_id": "RcnXoNLyM2"
    },
@@ -27,7 +27,6 @@
    "source": [
     "import pathlib\n",
     "\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "from joblib import load"
    ]
@@ -46,10 +45,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T16:40:46.205624Z",
-     "iopub.status.busy": "2024-05-28T16:40:46.205425Z",
-     "iopub.status.idle": "2024-05-28T16:40:46.208230Z",
-     "shell.execute_reply": "2024-05-28T16:40:46.207975Z"
+     "iopub.execute_input": "2024-05-28T17:17:04.003252Z",
+     "iopub.status.busy": "2024-05-28T17:17:04.002894Z",
+     "iopub.status.idle": "2024-05-28T17:17:04.005723Z",
+     "shell.execute_reply": "2024-05-28T17:17:04.005446Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -96,10 +95,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T16:40:46.209639Z",
-     "iopub.status.busy": "2024-05-28T16:40:46.209532Z",
-     "iopub.status.idle": "2024-05-28T16:40:46.578280Z",
-     "shell.execute_reply": "2024-05-28T16:40:46.577826Z"
+     "iopub.execute_input": "2024-05-28T17:17:04.007367Z",
+     "iopub.status.busy": "2024-05-28T17:17:04.007261Z",
+     "iopub.status.idle": "2024-05-28T17:17:04.370585Z",
+     "shell.execute_reply": "2024-05-28T17:17:04.370141Z"
     },
     "jukit_cell_id": "xdgUvt0md2"
    },
@@ -110,10 +109,7 @@
     "\n",
     "data_path = pathlib.Path(root_dir / \"1.train_models/classify_genotypes/data\").resolve(strict=True)\n",
     "le = load(f\"{data_path}/trained_nf1_model_label_encoder.joblib\")\n",
-    "model = load(f\"{data_path}/trained_nf1_model.joblib\")\n",
-    "\n",
-    "# Set the seed\n",
-    "rng = np.random.default_rng(0)"
+    "model = load(f\"{data_path}/trained_nf1_model.joblib\")"
    ]
   },
   {
@@ -130,10 +126,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T16:40:46.580537Z",
-     "iopub.status.busy": "2024-05-28T16:40:46.580329Z",
-     "iopub.status.idle": "2024-05-28T16:40:46.582754Z",
-     "shell.execute_reply": "2024-05-28T16:40:46.582461Z"
+     "iopub.execute_input": "2024-05-28T17:17:04.372571Z",
+     "iopub.status.busy": "2024-05-28T17:17:04.372405Z",
+     "iopub.status.idle": "2024-05-28T17:17:04.374718Z",
+     "shell.execute_reply": "2024-05-28T17:17:04.374439Z"
     },
     "jukit_cell_id": "byqT0qeQSc"
    },
@@ -157,10 +153,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T16:40:46.584376Z",
-     "iopub.status.busy": "2024-05-28T16:40:46.584092Z",
-     "iopub.status.idle": "2024-05-28T16:40:46.618338Z",
-     "shell.execute_reply": "2024-05-28T16:40:46.617909Z"
+     "iopub.execute_input": "2024-05-28T17:17:04.376413Z",
+     "iopub.status.busy": "2024-05-28T17:17:04.376307Z",
+     "iopub.status.idle": "2024-05-28T17:17:04.409734Z",
+     "shell.execute_reply": "2024-05-28T17:17:04.409363Z"
     },
     "jukit_cell_id": "qrteU1j4F9"
    },
@@ -188,10 +184,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T16:40:46.620327Z",
-     "iopub.status.busy": "2024-05-28T16:40:46.620191Z",
-     "iopub.status.idle": "2024-05-28T16:40:46.650871Z",
-     "shell.execute_reply": "2024-05-28T16:40:46.650438Z"
+     "iopub.execute_input": "2024-05-28T17:17:04.411597Z",
+     "iopub.status.busy": "2024-05-28T17:17:04.411485Z",
+     "iopub.status.idle": "2024-05-28T17:17:04.441641Z",
+     "shell.execute_reply": "2024-05-28T17:17:04.441222Z"
     },
     "jukit_cell_id": "FVQBNEvRSs"
    },
