Removed extra space in probability column name

--- a/2.evaluate_models/classify_genotypes/plate_4_sirna_genotype_probabilities.ipynb
+++ b/2.evaluate_models/classify_genotypes/plate_4_sirna_genotype_probabilities.ipynb
@@ -16,10 +16,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T17:17:03.783174Z",
-     "iopub.status.busy": "2024-05-28T17:17:03.783074Z",
-     "iopub.status.idle": "2024-05-28T17:17:04.001053Z",
-     "shell.execute_reply": "2024-05-28T17:17:04.000697Z"
+     "iopub.execute_input": "2024-05-28T17:21:18.457777Z",
+     "iopub.status.busy": "2024-05-28T17:21:18.457671Z",
+     "iopub.status.idle": "2024-05-28T17:21:18.676743Z",
+     "shell.execute_reply": "2024-05-28T17:21:18.676417Z"
     },
     "jukit_cell_id": "RcnXoNLyM2"
    },
@@ -45,10 +45,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T17:17:04.003252Z",
-     "iopub.status.busy": "2024-05-28T17:17:04.002894Z",
-     "iopub.status.idle": "2024-05-28T17:17:04.005723Z",
-     "shell.execute_reply": "2024-05-28T17:17:04.005446Z"
+     "iopub.execute_input": "2024-05-28T17:21:18.679057Z",
+     "iopub.status.busy": "2024-05-28T17:21:18.678601Z",
+     "iopub.status.idle": "2024-05-28T17:21:18.681444Z",
+     "shell.execute_reply": "2024-05-28T17:21:18.681171Z"
     },
     "jukit_cell_id": "QmTyYX7yVG"
    },
@@ -95,10 +95,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T17:17:04.007367Z",
-     "iopub.status.busy": "2024-05-28T17:17:04.007261Z",
-     "iopub.status.idle": "2024-05-28T17:17:04.370585Z",
-     "shell.execute_reply": "2024-05-28T17:17:04.370141Z"
+     "iopub.execute_input": "2024-05-28T17:21:18.682861Z",
+     "iopub.status.busy": "2024-05-28T17:21:18.682750Z",
+     "iopub.status.idle": "2024-05-28T17:21:19.047368Z",
+     "shell.execute_reply": "2024-05-28T17:21:19.046947Z"
     },
     "jukit_cell_id": "xdgUvt0md2"
    },
@@ -126,10 +126,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T17:17:04.372571Z",
-     "iopub.status.busy": "2024-05-28T17:17:04.372405Z",
-     "iopub.status.idle": "2024-05-28T17:17:04.374718Z",
-     "shell.execute_reply": "2024-05-28T17:17:04.374439Z"
+     "iopub.execute_input": "2024-05-28T17:21:19.049545Z",
+     "iopub.status.busy": "2024-05-28T17:21:19.049362Z",
+     "iopub.status.idle": "2024-05-28T17:21:19.051587Z",
+     "shell.execute_reply": "2024-05-28T17:21:19.051292Z"
     },
     "jukit_cell_id": "byqT0qeQSc"
    },
@@ -153,10 +153,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T17:17:04.376413Z",
-     "iopub.status.busy": "2024-05-28T17:17:04.376307Z",
-     "iopub.status.idle": "2024-05-28T17:17:04.409734Z",
-     "shell.execute_reply": "2024-05-28T17:17:04.409363Z"
+     "iopub.execute_input": "2024-05-28T17:21:19.053241Z",
+     "iopub.status.busy": "2024-05-28T17:21:19.053010Z",
+     "iopub.status.idle": "2024-05-28T17:21:19.086488Z",
+     "shell.execute_reply": "2024-05-28T17:21:19.086110Z"
     },
     "jukit_cell_id": "qrteU1j4F9"
    },
@@ -184,10 +184,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-28T17:17:04.411597Z",
-     "iopub.status.busy": "2024-05-28T17:17:04.411485Z",
-     "iopub.status.idle": "2024-05-28T17:17:04.441641Z",
-     "shell.execute_reply": "2024-05-28T17:17:04.441222Z"
+     "iopub.execute_input": "2024-05-28T17:21:19.088870Z",
+     "iopub.status.busy": "2024-05-28T17:21:19.088725Z",
+     "iopub.status.idle": "2024-05-28T17:21:19.119433Z",
+     "shell.execute_reply": "2024-05-28T17:21:19.119029Z"
     },
     "jukit_cell_id": "FVQBNEvRSs"
    },
@@ -195,7 +195,7 @@
    "source": [
     "probabilitydf = pd.DataFrame(\n",
     "    {\n",
-    "        f\"probability {le.inverse_transform([1])[0]}\":\n",
+    "        f\"probability_{le.inverse_transform([1])[0]}\":\n",
     "        model.predict_proba(plate4df[model.feature_names_in_])[:, 1]\n",
     "    }\n",
     ")\n",
